--- a/index.html
+++ b/index.html
@@ -3,33 +3,63 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Joshua Kotter</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+
+    <!-- Custom CSS for site header -->
+    <link rel="stylesheet" type="text/css" href="css/custom.css">
+
 </head>
 <body>
 
-    <div id="navbar">
+        <nav class="site-header sticky-top py-1">
 
-        <div id="navbuttons">
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
-                <li>Portfolio</li>
-            </ul>
+            <div class="container d-flex flex-column flex-md-row justify-content-between">
+                <div class="py-2 d-none d-md-inline-block"></div>
+                <div class="py-2 d-none d-md-inline-block"></div>
+                <div class="py-2 d-none d-md-inline-block"></div>
+                <div class="py-2 d-none d-md-inline-block"></div>
+                <a class="py-2 d-none d-md-inline-block" href="#">Home</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">About</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Contact</a>
+                <a class="py-2 d-none d-md-inline-block" href="#">Portfolio</a>
+                <div class="py-2 d-none d-md-inline-block"></div>
+                <div class="py-2 d-none d-md-inline-block"></div>
+                <div class="py-2 d-none d-md-inline-block"></div>
+                <div class="py-2 d-none d-md-inline-block"></div>
+            </div>
+        </nav>
+
+        <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-light">
+            <div class="col-xl-5 p-lg-5 mx-auto my-5">
+                <h1 class="display-4 font-weight-normal">Joshua Kotter</h1>
+                <p class="lead font-weight-normal">Developer, Engineer, MBA, Juggler, Martial Artist</p>
+            </div>
+        </div>
+
+
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+            <div class="my-3 py-3">
+                <h2 class="display-5">Another headline</h2>
+                <p class="lead">And an even wittier subheading.</p>
+            </div>
+            <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div class="my-3 p-3">
+                <h2 class="display-5">Another headline</h2>
+                <p class="lead">And an even wittier subheading.</p>
+            </div>
+            <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
         </div>
     </div>
 
-    <div id="sliderwrapper">
 
-        <div id="slides">
-
-        </div>
-
-        <div id="titletext">
-            <p class="titlebanner">Joshua Kotter</p>
-            <p class="titlesubtext">Developer, MBA, Engineer, Juggler, Martial Artist</p>
-        </div>
-    </div>
 
     <div id="about">
 
@@ -49,16 +79,20 @@
                 I also have experience with C, MATLAB, Labview, PLC Ladder Logic, and CAD programs
                 Some of my favorite projects include a capture-the-flag robot, a stock-picking
                 web scraper, and a label generator application currently used to label all incoming
-                inventory at my Ford Plant.
+                inventory at the Ford Kentucky Truck Plant.
             </p>
             <p class="bodytext">
                 In my spare time, I am training for my black belt test in Niseido Jujitsu, a defensive martial art.
-                My more peaceful hobbies include juggling balls, clubs, and knives. To unwind, I 
+                My more peaceful hobbies include juggling balls, clubs, and knives. To unwind, I
                 play my piano or guitar.
             </p>
         </div>
 
     </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
