--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+
+<!-- Welcome to the source for my home page. Happy reading. -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -16,79 +18,130 @@
 </head>
 <body>
 
-        <nav class="site-header sticky-top py-1">
-
-            <div class="container d-flex flex-column flex-md-row justify-content-between">
-                <div class="py-2 d-none d-md-inline-block"></div>
-                <div class="py-2 d-none d-md-inline-block"></div>
-                <div class="py-2 d-none d-md-inline-block"></div>
-                <div class="py-2 d-none d-md-inline-block"></div>
-                <a class="py-2 d-none d-md-inline-block" href="#">Home</a>
-                <a class="py-2 d-none d-md-inline-block" href="#">About</a>
-                <a class="py-2 d-none d-md-inline-block" href="#">Contact</a>
-                <a class="py-2 d-none d-md-inline-block" href="#">Portfolio</a>
-                <div class="py-2 d-none d-md-inline-block"></div>
-                <div class="py-2 d-none d-md-inline-block"></div>
-                <div class="py-2 d-none d-md-inline-block"></div>
-                <div class="py-2 d-none d-md-inline-block"></div>
-            </div>
-        </nav>
-
-        <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-light">
-            <div class="col-xl-5 p-lg-5 mx-auto my-5">
-                <h1 class="display-4 font-weight-normal">Joshua Kotter</h1>
-                <p class="lead font-weight-normal">Developer, Engineer, MBA, Juggler, Martial Artist</p>
-            </div>
+    <nav class="site-header sticky-top py-1">
+        <div class="container d-flex flex-column flex-md-row justify-content-between">
+            <a class="py-2 d-none d-md-inline-block" href="#">Home</a>
+            <a class="py-2 d-none d-md-inline-block" href="#">About</a>
+            <a class="py-2 d-none d-md-inline-block" href="#">Contact</a>
+            <a class="py-2 d-none d-md-inline-block" href="#">Portfolio</a>
         </div>
+    </nav>
 
+    <div id="banner_pic" class="position-relative overflow-hidden p-3 p-md-5 text-center">
+        <div class="p-lg-5 mx-auto my-5">
+            <h1 class="display-4 font-weight-normal">Joshua Kotter</h1>
+            <p class="lead font-weight-normal">Developer, Engineer, MBA, Juggler, Martial Artist</p>
+        </div>
+    </div>
 
     <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-        <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-            <div class="my-3 py-3">
-                <h2 class="display-5">Another headline</h2>
-                <p class="lead">And an even wittier subheading.</p>
-            </div>
-            <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+        <div id="welcome_pic" class="imagediv mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
         </div>
-        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
             <div class="my-3 p-3">
-                <h2 class="display-5">Another headline</h2>
-                <p class="lead">And an even wittier subheading.</p>
+                <h2 class="display-5">Greetings, Web Traveler.</h2>
+                <p class="lead"></p>
+                <p class="lead">
+                    My name is Joshua Kotter.
+                <p class="lead">
+                    Welcome to my site. Let me share some of my story.
+                </p>
+                </p>
             </div>
-            <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
         </div>
     </div>
 
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="my-3 py-3">
+                <h2 class="display-5">Education</h2>
+                <p class="lead">
+                    In 2014 I began studying at the University of Louisville.
+                </p>
+                <p class="lead">
+                    I graduated three times:
+                </p>
+                <p class="lead">
+                    <ul>
+                        <li class="lead">2018 - Bachelors in Mechanical Engineering - GPA 4.00</li>
+                        <li class="lead">2019 - Masters in Mechanical Engineering - GPA 4.00</li>
+                        <li class="lead">2020 - Masters in Business Administration - GPA 3.98</li>
+                    </ul>
+                </p>
+            </div>
+        </div>
+        <div id="uofl_pic" class="imagediv mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        </div>
+    </div>
 
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div id="ford_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
 
-    <div id="about">
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="my-3 p-3">
+                <h2 class="display-5">Work Experience</h2>
+                <p class="lead">
+                    Since 2015 I have worked in various engineering and supervisory roles at Ford Motor Company.
+                    I am currently work as a Joining Engineer at the Kentucky Truck Plant in Louisville, KY.
+                </p>
+            </div>
+        </div>
+    </div>
 
-        <div id="greeting">
-            <p class="bodytext">Greetings, Web Traveler.</p>
-            <p class="bodytext">
-                My name is Joshua Kotter.
-                I currently work as a Joining Engineer for Ford Motor Company.
-                I attended the University of Louisville and graduated thrice:
-                <ul class="bodytext">2018 - Bachelors in Mechanical Engineering - GPA 4.00</ul>
-                <ul class="bodytext">2019 - Masters in Mechanical Engineering - GPA 4.00</ul>
-                <ul class="bodytext">2020 - Masters in Business Administration - GPA 3.98</ul>
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="my-3 py-3">
+                <h2 class="display-5">Programming Experience</h2>
+                <p class="lead">
+                    As part of my work at Ford, I have written applications in Python, VBA, and SQLite.
+                    I have also built independent websites using HTML, CSS, Javascript, and Wordpress applications.
+                    On other projects, I have had experience with C, PLC Ladder Logic, and CAD programs.
+                </p>
+            </div>
+        </div>
+        <div id="code_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+
+        </div>
+    </div>
+
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div id="proj_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+        </div>
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="my-3 p-3">
+                <h2 class="display-5">Favorite Projects</h2>
+                <p class="lead">
+                    Some of my favorite projects include:
+                </p>
+                <ul>
+                    <li class="lead">A capture-the-flag robot I made as an Engineering Masters project</li>
+                    <li class="lead">A stock-picking web scraper I wrote during my MBA program</li>
+                    <li class="lead">A label generator application I built at work that is currently 
+                                     used to label all incoming inventory at the Ford Kentucky Truck Plant.
+                    </li>
+                </ul>
+</div>
+        </div>
+    </div>
+
+    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+        <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <h2 class="display-5">Other Interests</h2>
+
+            <p class="lead">
+                In my spare time, I am training for my black belt test in
+                Niseido Jujitsu, a defensive martial art.
             </p>
-            <p class="bodytext">
-                I have written applications for my work at Ford in Python, VBA, and SQLite.
-                I built independent websites using HTML, CSS, Javascript, and Wordpress applications.
-                I also have experience with C, MATLAB, Labview, PLC Ladder Logic, and CAD programs
-                Some of my favorite projects include a capture-the-flag robot, a stock-picking
-                web scraper, and a label generator application currently used to label all incoming
-                inventory at the Ford Kentucky Truck Plant.
-            </p>
-            <p class="bodytext">
-                In my spare time, I am training for my black belt test in Niseido Jujitsu, a defensive martial art.
-                My more peaceful hobbies include juggling balls, clubs, and knives. To unwind, I
-                play my piano or guitar.
+            <p class="lead">
+                To unwind, I juggle balls, clubs, and knives or
+                play the piano or guitar.
             </p>
         </div>
-
+        <div id="belt_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+        </div>
     </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
