--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 
     <nav class="site-header sticky-top py-1">
         <div class="container d-flex flex-column flex-md-row justify-content-between">
-            <a class="py-2 d-none d-md-inline-block" href="#">Home</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">About</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Contact</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Resume</a>
+            <a class="py-2 d-none d-md-inline-block" href="http://joshua-kotter.com/index.html">Home</a>
+            <a class="py-2 d-none d-md-inline-block" href="#education">About</a>
+            <a class="py-2 d-none d-md-inline-block" href="#get_in_touch">Contact</a>
+            <a class="py-2 d-none d-md-inline-block" target="_blank" href="https://drive.google.com/file/d/1RqbaUyIVZEpyFikAcCZAOJSUQHOSNg2G/view?usp=sharing">Resume</a>
         </div>
     </nav>
 
     <div id="banner_pic" class="position-relative overflow-hidden p-3 p-md-5 text-center">
         <div class="p-lg-5 mx-auto my-5">
             <h1 class="display-4 font-weight-normal">Joshua Kotter</h1>
-            <p class="lead font-weight-normal">Developer, Engineer, MBA, Juggler, Martial Artist</p>
+            <p class="lead font-weight-normal">Developer, Engineer, MBA, Martial Artist</p>
         </div>
     </div>
 
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+    <div id="education" class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
         <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
             <div class="my-3 py-3">
                 <h2 class="display-5">Education</h2>
@@ -99,7 +99,7 @@
                 <p class="lead">
                     As part of my work at Ford, I have written applications in Python, VBA, and SQLite.
                     I have also built independent websites using HTML, CSS, Javascript, and Wordpress applications.
-                    On other projects, I have had experience with C, PLC Ladder Logic, and CAD programs.
+                    On other projects, I have had experience with C++, Rockwell Automation RSLogix, and CAD programs.
                 </p>
             </div>
         </div>
@@ -148,7 +148,7 @@
 
     <div class="d-md-flex flex-md-equal w-100 my-md-3">
         <div id="get_in_touch" class="pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-            <p>What to learn more?</p>
+            <p class="lead"><b>Want to learn more?</b></p>
             <h3>I would love to hear from you.</h3>
             <div class="column-fluid text-center overflow-hidden">
                 <a class ="social-link" href="http://www.linkedin.com/in/joshua-kotter"><i class="fab fa-linkedin fa-3x fa-fw"></i></a>
