Add mobile view
Add div that only displays on windows less that 768px, and set the
original content div to display:none at 768px.

--- a/index.html
+++ b/index.html
@@ -37,125 +37,241 @@
         </div>
     </div>
 
-    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-        <div id="welcome_pic" class="imagediv mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-        </div>
-        <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
-            <div class="my-3 p-3">
-                <h2 class="display-5">Greetings, Web Traveler.</h2>
-                <p class="lead"></p>
-                <p class="lead">
-                    My name is Joshua Kotter.
-                <p class="lead">
-                    Welcome to my site. Let me share some of my story.
-                </p>
-                </p>
+    <!--html to display for desktop (> 768px)-->
+    <div id="displaydesktop">
+        <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
+            <div id="welcome_pic" class="imagediv mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+            </div>
+            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+                <div class="my-3 p-3">
+                    <h2 class="display-5">Greetings, Web Traveler.</h2>
+                    <p class="lead"></p>
+                    <p class="lead">
+                        My name is Joshua Kotter.
+                    <p class="lead">
+                        Welcome to my site. Let me share some of my story.
+                    </p>
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
 
-    <div id="education" class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-        <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
-            <div class="my-3 py-3">
-                <h2 class="display-5">Education</h2>
-                <p class="lead">
-                    In 2014 I began studying at the University of Louisville.
-                </p>
-                <p class="lead">
-                    I graduated three times:
-                </p>
-                <p class="lead">
+        <div id="education" class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
+            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+                <div class="my-3 py-3">
+                    <h2 class="display-5">Education</h2>
+                    <p class="lead">
+                        In 2014 I began studying at the University of Louisville.
+                    </p>
+                    <p class="lead">
+                        I graduated three times:
+                    </p>
+                    <p class="lead">
+                        <ul>
+                            <li class="lead">2018 - Bachelors in Mechanical Engineering - GPA 4.00</li>
+                            <li class="lead">2019 - Masters in Mechanical Engineering - GPA 4.00</li>
+                            <li class="lead">2020 - Masters in Business Administration - GPA 3.98</li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+            <div id="uofl_pic" class="imagediv mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            </div>
+        </div>
+
+        <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
+            <div id="ford_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+
+            </div>
+            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+                <div class="my-3 p-3">
+                    <h2 class="display-5">Work Experience</h2>
+                    <p class="lead">
+                        Since 2015 I have worked in various engineering and supervisory roles at Ford Motor Company.
+                        I am currently work as a Joining Engineer at the Kentucky Truck Plant in Louisville, KY.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
+            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+                <div class="my-3 py-3">
+                    <h2 class="display-5">Programming Experience</h2>
+                    <p class="lead">
+                        As part of my work at Ford, I have written applications in Python, VBA, and SQLite.
+                        I have also built independent websites using HTML, CSS, Javascript, and Wordpress applications.
+                        On other projects, I have had experience with C++, Rockwell Automation RSLogix, and CAD programs.
+                    </p>
+                </div>
+            </div>
+            <div id="code_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+
+            </div>
+        </div>
+
+        <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
+            <div id="proj_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+            </div>
+            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+                <div class="my-3 p-3">
+                    <h2 class="display-5">Favorite Projects</h2>
+                    <p class="lead">
+                        Some of my favorite projects include:
+                    </p>
                     <ul>
-                        <li class="lead">2018 - Bachelors in Mechanical Engineering - GPA 4.00</li>
-                        <li class="lead">2019 - Masters in Mechanical Engineering - GPA 4.00</li>
-                        <li class="lead">2020 - Masters in Business Administration - GPA 3.98</li>
+                        <li class="lead">
+                            A label generator application currently
+                            used to label all incoming inventory at the Ford Kentucky Truck Plant.
+                        </li>
+                        <li class="lead">A capture-the-flag robot I made as an Engineering Masters project</li>
+                        <li class="lead">A stock-picking web scraper I wrote during my MBA program</li>
                     </ul>
-                </p>
+                </div>
             </div>
         </div>
-        <div id="uofl_pic" class="imagediv mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-        </div>
-    </div>
 
-    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-        <div id="ford_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+        <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
+            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+                <h2 class="display-5">Other Interests</h2>
 
-        </div>
-        <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
-            <div class="my-3 p-3">
-                <h2 class="display-5">Work Experience</h2>
                 <p class="lead">
-                    Since 2015 I have worked in various engineering and supervisory roles at Ford Motor Company.
-                    I am currently work as a Joining Engineer at the Kentucky Truck Plant in Louisville, KY.
+                    In my spare time, I am training for my black belt test in
+                    Niseido Jujitsu, a defensive martial art.
                 </p>
-            </div>
-        </div>
-    </div>
-
-    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-        <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
-            <div class="my-3 py-3">
-                <h2 class="display-5">Programming Experience</h2>
                 <p class="lead">
-                    As part of my work at Ford, I have written applications in Python, VBA, and SQLite.
-                    I have also built independent websites using HTML, CSS, Javascript, and Wordpress applications.
-                    On other projects, I have had experience with C++, Rockwell Automation RSLogix, and CAD programs.
+                    To unwind, I juggle balls, clubs, and knives or
+                    play the piano or guitar.
                 </p>
             </div>
+            <div id="belt_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            </div>
         </div>
-        <div id="code_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
 
-        </div>
     </div>
 
-    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-        <div id="proj_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+    <div id="displaymobile">
+        <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
+            <div id="welcome_pic" class="imagediv mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+            </div>
+            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+                <div class="my-3 p-3">
+                    <h2 class="display-5">Greetings, Web Traveler.</h2>
+                    <p class="lead"></p>
+                    <p class="lead">
+                        My name is Joshua Kotter.
+                    <p class="lead">
+                        Welcome to my site. Let me share some of my story.
+                    </p>
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
-            <div class="my-3 p-3">
-                <h2 class="display-5">Favorite Projects</h2>
+
+        <div id="education" class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
+            <div id="uofl_pic" class="imagediv mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            </div>
+            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+                <div class="my-3 py-3">
+                    <h2 class="display-5">Education</h2>
+                    <p class="lead">
+                        In 2014 I began studying at the University of Louisville.
+                    </p>
+                    <p class="lead">
+                        I graduated three times:
+                    </p>
+                    <p class="lead">
+                        <ul>
+                            <li class="lead">2018 - Bachelors in Mechanical Engineering - GPA 4.00</li>
+                            <li class="lead">2019 - Masters in Mechanical Engineering - GPA 4.00</li>
+                            <li class="lead">2020 - Masters in Business Administration - GPA 3.98</li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
+            <div id="ford_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+            </div>
+            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+                <div class="my-3 p-3">
+                    <h2 class="display-5">Work Experience</h2>
+                    <p class="lead">
+                        Since 2015 I have worked in various engineering and supervisory roles at Ford Motor Company.
+                        I am currently work as a Joining Engineer at the Kentucky Truck Plant in Louisville, KY.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
+            <div id="code_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            </div>
+            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+                <div class="my-3 py-3">
+                    <h2 class="display-5">Programming Experience</h2>
+                    <p class="lead">
+                        As part of my work at Ford, I have written applications in Python, VBA, and SQLite.
+                        I have also built independent websites using HTML, CSS, Javascript, and Wordpress applications.
+                        On other projects, I have had experience with C++, Rockwell Automation RSLogix, and CAD programs.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
+            <div id="proj_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+            </div>
+            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+                <div class="my-3 p-3">
+                    <h2 class="display-5">Favorite Projects</h2>
+                    <p class="lead">
+                        Some of my favorite projects include:
+                    </p>
+                    <ul>
+                        <li class="lead">
+                            A label generator application currently
+                            used to label all incoming inventory at the Ford Kentucky Truck Plant.
+                        </li>
+                        <li class="lead">A capture-the-flag robot I made as an Engineering Masters project</li>
+                        <li class="lead">A stock-picking web scraper I wrote during my MBA program</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
+            <div id="belt_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            </div>
+            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+                <h2 class="display-5">Other Interests</h2>
+
                 <p class="lead">
-                    Some of my favorite projects include:
+                    In my spare time, I am training for my black belt test in
+                    Niseido Jujitsu, a defensive martial art.
                 </p>
-                <ul>
-                    <li class="lead">
-                        A label generator application currently
-                        used to label all incoming inventory at the Ford Kentucky Truck Plant.
-                    </li>
-                    <li class="lead">A capture-the-flag robot I made as an Engineering Masters project</li>
-                    <li class="lead">A stock-picking web scraper I wrote during my MBA program</li>
-                </ul>
+                <p class="lead">
+                    To unwind, I juggle balls, clubs, and knives or
+                    play the piano or guitar.
+                </p>
             </div>
         </div>
+
     </div>
 
-    <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-        <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
-            <h2 class="display-5">Other Interests</h2>
-
-            <p class="lead">
-                In my spare time, I am training for my black belt test in
-                Niseido Jujitsu, a defensive martial art.
-            </p>
-            <p class="lead">
-                To unwind, I juggle balls, clubs, and knives or
-                play the piano or guitar.
-            </p>
-        </div>
-        <div id="belt_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
-        </div>
-    </div>
-
-    <div class="d-md-flex flex-md-equal w-100 my-md-3">
+    <div class="d-md-flex flex-md-equal w-100 my-3">
         <div id="get_in_touch" class="pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
             <p class="lead"><b>Want to learn more?</b></p>
             <h3>I would love to hear from you.</h3>
             <div class="column-fluid text-center overflow-hidden">
-                <a class ="social-link" href="http://www.linkedin.com/in/joshua-kotter"><i class="fab fa-linkedin fa-3x fa-fw"></i></a>
-                <a class ="social-link" href="mailTo:joshua.kotter@gmail.com"><i class="fas fa-envelope fa-3x fa-fw"></i></a>
+                <a class="social-link" href="http://www.linkedin.com/in/joshua-kotter"><i class="fab fa-linkedin fa-3x fa-fw"></i></a>
+                <a class="social-link" href="mailTo:joshua.kotter@gmail.com"><i class="fas fa-envelope fa-3x fa-fw"></i></a>
             </div>
         </div>
     </div>
+
+
 
     <div class="site-footer bg-dark text-white text-center py-1">
         <p></p>
@@ -164,6 +280,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/custom.js"></script>
 
 </body>
 </html>
