--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <!--html to display for desktop (> 768px)-->
     <div id="displaydesktop">
         <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div id="welcome_pic" class="imagediv mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+            <div id="welcome_pic" class="imagediv mr-md-3 pt-3 px-3 px-md-5 text-center text-white overflow-hidden">
             </div>
-            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
                 <div class="my-3 p-3">
                     <h2 class="display-5">Greetings, Web Traveler.</h2>
                     <p class="lead"></p>
@@ -57,7 +57,7 @@
         </div>
 
         <div id="education" class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
                 <div class="my-3 py-3">
                     <h2 class="display-5">Education</h2>
                     <p class="lead">
@@ -75,15 +75,15 @@
                     </p>
                 </div>
             </div>
-            <div id="uofl_pic" class="imagediv mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div id="uofl_pic" class="imagediv mr-md-3 pt-3 px-3 px-md-5 text-center overflow-hidden">
             </div>
         </div>
 
         <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div id="ford_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+            <div id="ford_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 px-md-5 text-center text-white overflow-hidden">
 
             </div>
-            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
                 <div class="my-3 p-3">
                     <h2 class="display-5">Work Experience</h2>
                     <p class="lead">
@@ -95,7 +95,7 @@
         </div>
 
         <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
                 <div class="my-3 py-3">
                     <h2 class="display-5">Programming Experience</h2>
                     <p class="lead">
@@ -105,15 +105,15 @@
                     </p>
                 </div>
             </div>
-            <div id="code_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div id="code_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 px-md-5 text-center overflow-hidden">
 
             </div>
         </div>
 
         <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div id="proj_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+            <div id="proj_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 px-md-5 text-center text-white overflow-hidden">
             </div>
-            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
                 <div class="my-3 p-3">
                     <h2 class="display-5">Favorite Projects</h2>
                     <p class="lead">
@@ -132,29 +132,32 @@
         </div>
 
         <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
-                <h2 class="display-5">Other Interests</h2>
+            <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
+                <div class="my-3 p-3">
+                    <h2 class="display-5">Other Interests</h2>
 
-                <p class="lead">
-                    In my spare time, I am training for my black belt test in
-                    Niseido Jujitsu, a defensive martial art.
-                </p>
-                <p class="lead">
-                    To unwind, I juggle balls, clubs, and knives or
-                    play the piano or guitar.
-                </p>
+                    <p class="lead">
+                        In my spare time, I am training for my black belt test in
+                        Niseido Jujitsu, a defensive martial art.
+                    </p>
+                    <p class="lead">
+                        To unwind, I juggle balls, clubs, and knives or
+                        play the piano or guitar.
+                    </p>
+                </div>
             </div>
-            <div id="belt_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div id="belt_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
             </div>
         </div>
 
     </div>
 
+    <!--html to display for mobile (< 768px)-->
     <div id="displaymobile">
         <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div id="welcome_pic" class="imagediv mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+            <div id="welcome_pic" class="imagediv mr-md-3 pt-3 px-3  px-md-5 text-center text-white overflow-hidden">
             </div>
-            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
                 <div class="my-3 p-3">
                     <h2 class="display-5">Greetings, Web Traveler.</h2>
                     <p class="lead"></p>
@@ -169,9 +172,9 @@
         </div>
 
         <div id="education" class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div id="uofl_pic" class="imagediv mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div id="uofl_pic" class="imagediv mr-md-3 pt-3 px-3 px-md-5 text-center overflow-hidden">
             </div>
-            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
                 <div class="my-3 py-3">
                     <h2 class="display-5">Education</h2>
                     <p class="lead">
@@ -192,9 +195,9 @@
         </div>
 
         <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div id="ford_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+            <div id="ford_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 px-md-5 text-center text-white overflow-hidden">
             </div>
-            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
                 <div class="my-3 p-3">
                     <h2 class="display-5">Work Experience</h2>
                     <p class="lead">
@@ -206,9 +209,9 @@
         </div>
 
         <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div id="code_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+            <div id="code_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 px-md-5 text-center overflow-hidden">
             </div>
-            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
                 <div class="my-3 py-3">
                     <h2 class="display-5">Programming Experience</h2>
                     <p class="lead">
@@ -221,9 +224,9 @@
         </div>
 
         <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div id="proj_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+            <div id="proj_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 px-md-5 text-center text-white overflow-hidden">
             </div>
-            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
                 <div class="my-3 p-3">
                     <h2 class="display-5">Favorite Projects</h2>
                     <p class="lead">
@@ -242,26 +245,28 @@
         </div>
 
         <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div id="belt_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
+            <div id="belt_pic" class="imagediv bg-light mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
             </div>
-            <div class="bg-grey mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-left overflow-hidden">
-                <h2 class="display-5">Other Interests</h2>
+            <div class="bg-grey mr-md-3 pt-3 pb-3 px-3 px-md-5 text-left overflow-hidden">
+                <div class="my-3 p-3">
+                    <h2 class="display-5">Other Interests</h2>
 
-                <p class="lead">
-                    In my spare time, I am training for my black belt test in
-                    Niseido Jujitsu, a defensive martial art.
-                </p>
-                <p class="lead">
-                    To unwind, I juggle balls, clubs, and knives or
-                    play the piano or guitar.
-                </p>
+                    <p class="lead">
+                        In my spare time, I am training for my black belt test in
+                        Niseido Jujitsu, a defensive martial art.
+                    </p>
+                    <p class="lead">
+                        To unwind, I juggle balls, clubs, and knives or
+                        play the piano or guitar.
+                    </p>
+                </div>
             </div>
         </div>
 
     </div>
 
     <div class="d-md-flex flex-md-equal w-100 my-3">
-        <div id="get_in_touch" class="pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+        <div id="get_in_touch" class="pt-3 px-3 px-md-5 text-center overflow-hidden">
             <p class="lead"><b>Want to learn more?</b></p>
             <h3>I would love to hear from you.</h3>
             <div class="column-fluid text-center overflow-hidden">
