Add .htaccess, fix typos and navbar hiding
Add .htaccess to allow page to load as https and not get a "Not
Secure" flag from chrome. Fixed grammar typos in Work Experience
section. Fix issue where navbar would hide on mobile screens.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 <body>
 
     <nav class="site-header sticky-top py-1">
-        <div class="container d-flex flex-column flex-md-row justify-content-between">
-            <a class="py-2 d-none d-md-inline-block" href="http://joshua-kotter.com/index.html">Home</a>
-            <a class="py-2 d-none d-md-inline-block" href="#education">About</a>
-            <a class="py-2 d-none d-md-inline-block" href="#get_in_touch">Contact</a>
-            <a class="py-2 d-none d-md-inline-block" target="_blank" href="https://drive.google.com/file/d/1RqbaUyIVZEpyFikAcCZAOJSUQHOSNg2G/view?usp=sharing">Resume</a>
+        <div class="container d-flex flex-md-row justify-content-between">
+            <a class="py-2 d-inline-block" href="http://joshua-kotter.com/index.html">Home</a>
+            <a class="py-2 d-inline-block" href="#education">About</a>
+            <a class="py-2 d-inline-block" href="#get_in_touch">Contact</a>
+            <a class="py-2 d-inline-block" target="_blank" href="https://drive.google.com/file/d/1RqbaUyIVZEpyFikAcCZAOJSUQHOSNg2G/view?usp=sharing">Resume</a>
         </div>
     </nav>
 
@@ -87,8 +87,8 @@
                 <div class="my-3 p-3">
                     <h2 class="display-5">Work Experience</h2>
                     <p class="lead">
-                        Since 2015 I have worked in various engineering and supervisory roles at Ford Motor Company.
-                        I am currently work as a Joining Engineer at the Kentucky Truck Plant in Louisville, KY.
+                        Since 2015 I have worked in engineering and supervisory roles at Ford Motor Company.
+                        I currently work as a Joining Engineer at the Ford Kentucky Truck Plant in Louisville, KY.
                     </p>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                     <h2 class="display-5">Programming Experience</h2>
                     <p class="lead">
                         As part of my work at Ford, I have written applications in Python, VBA, and SQLite.
-                        I have also built independent websites using HTML, CSS, Javascript, and Wordpress applications.
+                        I have also built independent websites using HTML, CSS, JavaScript, and Wordpress applications.
                         On other projects, I have had experience with C++, Rockwell Automation RSLogix, and CAD programs.
                     </p>
                 </div>
@@ -201,8 +201,8 @@
                 <div class="my-3 p-3">
                     <h2 class="display-5">Work Experience</h2>
                     <p class="lead">
-                        Since 2015 I have worked in various engineering and supervisory roles at Ford Motor Company.
-                        I am currently work as a Joining Engineer at the Kentucky Truck Plant in Louisville, KY.
+                        Since 2015 I have worked in engineering and supervisory roles at Ford Motor Company.
+                        I currently work as a Joining Engineer at the Ford Kentucky Truck Plant in Louisville, KY.
                     </p>
                 </div>
             </div>
@@ -216,7 +216,7 @@
                     <h2 class="display-5">Programming Experience</h2>
                     <p class="lead">
                         As part of my work at Ford, I have written applications in Python, VBA, and SQLite.
-                        I have also built independent websites using HTML, CSS, Javascript, and Wordpress applications.
+                        I have also built independent websites using HTML, CSS, JavaScript, and Wordpress applications.
                         On other projects, I have had experience with C++, Rockwell Automation RSLogix, and CAD programs.
                     </p>
                 </div>
