Fix text phrasing, modify pictures, fix footer bug
Streamline some text phrasing, change the banner picture slightly,
and fix a bug that causes the footer to show side-by-side with the
contact bar at intermediately small screen display widths.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <p class="lead">
                         <ul>
                             <li class="lead">2018 - Bachelors in Mechanical Engineering - GPA 4.00</li>
-                            <li class="lead">2019 - Masters in Mechanical Engineering - GPA 4.00</li>
+                            <li class="lead">2019 - Masters in Mechanical Engineering  - GPA 4.00</li>
                             <li class="lead">2020 - Masters in Business Administration - GPA 3.98</li>
                         </ul>
                     </p>
@@ -88,7 +88,7 @@
                     <h2 class="display-5">Work Experience</h2>
                     <p class="lead">
                         Since 2015 I have worked in engineering and supervisory roles at Ford Motor Company.
-                        I currently work as a Joining Engineer at the Ford Kentucky Truck Plant in Louisville, KY.
+                        I currently work as a Joining Engineering Specialist at the Ford Kentucky Truck Plant in Louisville, KY.
                     </p>
                 </div>
             </div>
@@ -111,7 +111,7 @@
         </div>
 
         <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div id="proj_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 px-md-5 text-center text-white overflow-hidden">
+            <div id="proj_pic" class="imagediv mr-md-3 pt-3 px-3 px-md-5 text-center text-white overflow-hidden">
             </div>
             <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
                 <div class="my-3 p-3">
@@ -122,10 +122,10 @@
                     <ul>
                         <li class="lead">
                             A label generator application currently
-                            used to label all incoming inventory at the Ford Kentucky Truck Plant.
+                            used to track incoming inventory at the Ford Kentucky Truck Plant.
                         </li>
-                        <li class="lead">A capture-the-flag robot I made as an Engineering Masters project</li>
-                        <li class="lead">A stock-picking web scraper I wrote during my MBA program</li>
+                        <li class="lead">A self-guided robot that won an Engineering Masters competition</li>
+                        <li class="lead">A financial-information web scraper made for an MBA project</li>
                     </ul>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                     <h2 class="display-5">Other Interests</h2>
 
                     <p class="lead">
-                        In my spare time, I am training for my black belt test in
+                        In my spare time, I am training for the black belt exam in
                         Niseido Jujitsu, a defensive martial art.
                     </p>
                     <p class="lead">
@@ -183,7 +183,7 @@
                     <p class="lead">
                         I graduated three times:
                     </p>
-                    <p class="lead">
+                    <p class="lead text-justify">
                         <ul>
                             <li class="lead">2018 - Bachelors in Mechanical Engineering - GPA 4.00</li>
                             <li class="lead">2019 - Masters in Mechanical Engineering - GPA 4.00</li>
@@ -202,7 +202,7 @@
                     <h2 class="display-5">Work Experience</h2>
                     <p class="lead">
                         Since 2015 I have worked in engineering and supervisory roles at Ford Motor Company.
-                        I currently work as a Joining Engineer at the Ford Kentucky Truck Plant in Louisville, KY.
+                        I currently work as a Joining Engineering Specialist at the Ford Kentucky Truck Plant in Louisville, KY.
                     </p>
                 </div>
             </div>
@@ -224,7 +224,7 @@
         </div>
 
         <div class="d-md-flex flex-md-equal w-100 my-3 pl-md-3">
-            <div id="proj_pic" class="imagediv bg-dark mr-md-3 pt-3 px-3 px-md-5 text-center text-white overflow-hidden">
+            <div id="proj_pic" class="imagediv mr-md-3 pt-3 px-3 px-md-5 text-center text-white overflow-hidden">
             </div>
             <div class="bg-grey mr-md-3 pt-3 px-3 px-md-5 text-left overflow-hidden">
                 <div class="my-3 p-3">
@@ -235,10 +235,10 @@
                     <ul>
                         <li class="lead">
                             A label generator application currently
-                            used to label all incoming inventory at the Ford Kentucky Truck Plant.
+                            used to track incoming inventory at the Ford Kentucky Truck Plant.
                         </li>
-                        <li class="lead">A capture-the-flag robot I made as an Engineering Masters project</li>
-                        <li class="lead">A stock-picking web scraper I wrote during my MBA program</li>
+                        <li class="lead">A self-guided robot that won an Engineering Masters competition</li>
+                        <li class="lead">A financial-information web scraper made for an MBA project</li>
                     </ul>
                 </div>
             </div>
@@ -252,7 +252,7 @@
                     <h2 class="display-5">Other Interests</h2>
 
                     <p class="lead">
-                        In my spare time, I am training for my black belt test in
+                        In my spare time, I am training for the black belt exam in
                         Niseido Jujitsu, a defensive martial art.
                     </p>
                     <p class="lead">
@@ -265,13 +265,16 @@
 
     </div>
 
-    <div class="d-md-flex flex-md-equal w-100 my-3">
+    <div class="flex-md-equal w-100 my-3">
         <div id="get_in_touch" class="pt-3 px-3 px-md-5 text-center overflow-hidden">
-            <p class="lead"><b>Want to learn more?</b></p>
-            <h3>I would love to hear from you.</h3>
-            <div class="column-fluid text-center overflow-hidden">
-                <a class="social-link" href="http://www.linkedin.com/in/joshua-kotter"><i class="fab fa-linkedin fa-3x fa-fw"></i></a>
-                <a class="social-link" href="mailTo:joshua.kotter@gmail.com"><i class="fas fa-envelope fa-3x fa-fw"></i></a>
+            <div id="get_in_touch" class="pt-3 px-3 px-md-5 text-center overflow-hidden">
+                <p class="lead"><b>Want to learn more?</b></p>
+                <h3>I would love to hear from you.</h3>
+                <div class="column-fluid text-center overflow-hidden">
+                    <a class="social-link" target="_blank" href="http://www.linkedin.com/in/joshua-kotter"><i class="fab fa-linkedin fa-3x fa-fw"></i></a>
+                    <a class="social-link" href="mailTo:joshua.kotter@gmail.com"><i class="fas fa-envelope fa-3x fa-fw"></i></a>
+                    <a class="social-link" target="_blank" href="https://github.com/jkotter1"><i class="fab fa-github-square fa-3x fa-fw"></i></a>
+                </div>
             </div>
         </div>
     </div>
